--- a/pacientes/templates/paciente.html
+++ b/pacientes/templates/paciente.html
@@ -37,11 +37,11 @@
                     class="inline-flex items-center rounded-md bg-red-50 px-2 py-1 text-xs font-medium text-red-700 ring-1 ring-inset ring-red-700/10">2
                     Faltas</span>
 
-                <form action="{% url 'atualizar_paciente' paciente.id %}" method="POST">
+                <form action="{% url 'atualizar_paciente' paciente.id %}" method="POST"> {% csrf_token %}
                     <select name="pagamento"
                         class="block w-1/3 mt-4 rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
-                        <option value="ativo">Ativo</option>
-                        <option value="inativo">Inativo</option>
+                        <option value="ativo" {% if paciente.pagamento %}selected {%endif%}>Ativo</option>
+                        <option value="inativo" {% if not paciente.pagamento %} selected {%endif%}>Inativo</option>
                     </select>
                     <button type="submit"
                         class="inline-flex justify-center rounded-md bg-indigo-600 mt-4 cursor-pointer px-3 py-2  w-1/3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Atualizar</button>
@@ -57,9 +57,21 @@
                 <div>
                     <h2 class="text-pretty text-3xl font-semibold tracking-tight text-gray-900 sm:text-4xl">Registrar
                         consulta</h2>
+                    {% if messages %}
+                    {% for message in messages %}
+                    <div class="rounded-md {{message.tags}}">
+                        <div class="flex">
+                            <div class="ml-3 py-4">
+                                {{ message }}
+                            </div>
 
-                    <form action="{% url 'paciente_view' paciente.id %}" method="POST" enctype='multipart/form-data'>{%
-                        csrf_token %}
+                        </div>
+
+                    </div>
+                    {% endfor %}
+                    {% endif %}
+                    <form action="{% url 'paciente_view' paciente.id %}" method="POST" enctype='multipart/form-data'>
+                        {%csrf_token %}
                         <label for="nome" class="block mt-2 text-sm/6 font-medium text-gray-600">Humor paciente</label>
                         <div class="mt-2">
                             <input type="range" name="humor" min="1" max="5" value="1"
@@ -82,9 +94,9 @@
                         <div class="mt-2">
                             <select name="tarefas" id="" multiple
                                 class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6">
-
-                                <option value="">RPD</option>
-
+                                {% for tarefa in tarefas %}
+                                <option value="{{ tarefa.id }}">{{ tarefa.tarefa }}</option>
+                                {% endfor %}
                             </select>
                         </div>
                         <button type="submit"
