--- a/pacientes/templates/paciente.html
+++ b/pacientes/templates/paciente.html
@@ -108,7 +108,7 @@
 
                 <div class="mx-auto">
                     <ul role="list" class="divide-y divide-white/5">
-
+                        {% for consulta in consultas %}
                         <li class="relative flex items-center space-x-4 py-4">
                             <div class="min-w-0 flex-auto">
                                 <div class="flex items-center gap-x-3">
@@ -117,7 +117,7 @@
                                     </div>
                                     <h2 class="min-w-0 text-sm/6 font-semibold text-slate-800">
                                         <a href="#" class="flex gap-x-2">
-                                            <span class="truncate">30/02/20024</span>
+                                            <span class="truncate">{{consulta.data}}</span>
 
                                         </a>
                                     </h2>
@@ -127,7 +127,7 @@
                                     <p class="whitespace-nowrap">0 - 0</p>
                                 </div>
                             </div>
-                            <a href="" class="flex gap-x-2">
+                            <a href="{% url 'excluir_consulta' consulta.id %}" class="flex gap-x-2">
                                 <div
                                     class="flex-none rounded-full bg-red-400/10 px-2 py-1 text-xs font-medium text-red-400 ring-1 ring-inset ring-red-400/30">
                                     excluir</div>
@@ -140,7 +140,7 @@
                             </a>
                         </li>
 
-
+                        {% endfor %}
 
                     </ul>
 
